--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,15 @@
-{% set version = "23.1.1" %}
+{% set version = "23.1.2" %}
 
 package:
   name: erlang
   version: {{ version }}
 
 source:
-  fn: otp_src_{{ version }}.tar.gz
   url: https://github.com/erlang/otp/archive/OTP-{{ version }}.tar.gz
   sha256: 8094484d94bce21d76f3a6c6137098839e7bc121e170c08b472f980296684ac9
 
 build:
-  number: 1
+  number: 0
   skip: true  # [win]
 
 requirements:
@@ -38,10 +37,11 @@ test:
     - erlc
 
 about:
-  home: http://www.erlang.org/
+  home: https://www.erlang.org/
   license: Apache-2.0
   license_file: LICENSE.txt
   summary: A programming language used to build massively scalable soft real-time systems with requirements on high availability.
+  dev_url: https://github.com/erlang/otp
 
 extra:
   recipe-maintainers:
