--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ requirements:
     - {{ compiler('fortran') }}
     - autoconf 2.*
     - m4 1.4.*
+    - make
   host:
     - perl
     - readline
