--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - autoconf 2.*
     - m4 1.4.*
     - make
+    - sysroot_linux-64 2.17  # [linux64]
   host:
     - perl
     - readline
