--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,10 +14,10 @@ build:
 
 requirements:
   build:
-    - gnuconfig  # [unix]
     - {{ compiler('c') }}
     - {{ stdlib("c") }}
     - {{ compiler('cxx') }}
+    - gnuconfig
     - make
   host:
     - perl
