--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,9 +14,9 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
+    - {{ compiler("c") }}
     - {{ stdlib("c") }}
-    - {{ compiler('cxx') }}
+    - {{ compiler("cxx") }}
     - gnuconfig
     - make
   host:
