Squashed commit of the following:
commit adf094b31436009b459f2203054246342eb916ba
Merge: cd8568b 42c7c7b
Author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Date:   Mon Jun 24 21:55:02 2024 +0000

    Arm osx bootstrap (#162)

    automerged PR by conda-forge/automerge-action

commit 42c7c7b83200801fd8e9c7cf7a9b43917cb8a366
Author: jakirkham <jakirkham@gmail.com>
Date:   Mon Jun 24 14:17:47 2024 -0700

    Fix native test selectors

commit fec7f05e2952b5d964e9c9dbe9bbc3bdaf5da912
Author: conda-forge-webservices[bot] <91080706+conda-forge-webservices[bot]@users.noreply.github.com>
Date:   Mon Jun 24 21:16:04 2024 +0000

    MNT: Re-rendered with conda-build 24.5.1, conda-smithy 3.36.2, and conda-forge-pinning 2024.06.24.15.36.35

commit dc70ba476e8ac290b4ace359c58e5a906269918a
Author: jakirkham <jakirkham@gmail.com>
Date:   Mon Jun 24 14:14:06 2024 -0700

    Enable testing for cross-compilation

commit fe0477280d6344b454e8a3e1b807e55b35483305
Author: jakirkham <jakirkham@gmail.com>
Date:   Mon Jun 24 14:13:29 2024 -0700

    Add cross-compilation friendly tests

commit 7e2046c9bda259efbb2563760e3ff3b607dd783e
Author: jakirkham <jakirkham@gmail.com>
Date:   Mon Jun 24 14:06:38 2024 -0700

    Readd macOS ARM test skip

commit 7ac134425076de2f32dfa08410fd1dd7c2aade96
Author: jakirkham <jakirkham@gmail.com>
Date:   Mon Jun 24 13:36:51 2024 -0700

    Readd `-O1` compiler flags for bootstrap build

commit 2bbde16a72d7824cb7faf22bd2e817118da18719
Author: jakirkham <jakirkham@gmail.com>
Date:   Mon Jun 24 13:26:22 2024 -0700

    Move `set` before `cp`s

commit 5a6f09f64103de4dc5105e4cd18ea6fc2f99e295
Author: jakirkham <jakirkham@gmail.com>
Date:   Mon Jun 24 13:24:49 2024 -0700

    Bump `build/number` to `2`

    Rebuild for macOS ARM changes.

commit eb72b828ee5d8e63098c62edc8430ed25f395c10
Merge: df6ceed cd8568b
Author: jakirkham <jakirkham@gmail.com>
Date:   Mon Jun 24 13:22:15 2024 -0700

    Merge conda-forge/main into danielhollas/a

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,17 +9,15 @@ source:
   sha256: d34b409cb5968ae47dd5a0c4f85b925d5601898d90788bbb08d514964a3a141d
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
 
 requirements:
   build:
-    - {{ compiler('c') }}
     - {{ stdlib("c") }}
-    - {{ compiler('cxx') }}
-    - {{ compiler('fortran') }}
-    - autoconf 2.*
-    - m4 1.4.*
+    - {{ compiler("c") }}
+    - {{ compiler("cxx") }}
+    - gnuconfig
     - make
   host:
     - perl
@@ -35,8 +33,10 @@ requirements:
 
 test:
   commands:
-    - erl -version
-    - erlc
+    - which erl
+    - which erlc
+    - erl -version    # [build_platform == target_platform]
+    - erlc            # [build_platform == target_platform]
 
 about:
   home: https://www.erlang.org/
@@ -51,3 +51,4 @@ extra:
     - scopatz
     - jakirkham
     - sodre
+    - danielhollas
