Overwrite LDFLAGS for bootstrap build
We need to set the path to $BUILD_PREFIX/lib
instead of $PREFIX/lib for the bootstrap build
so that configure properly detects system zlib.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ requirements:
     - {{ compiler("cxx") }}
     - gnuconfig
     - make
+    - zlib  # [build_platform != target_platform]
   host:
     - perl
     - readline
