--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,3 +1,13 @@
 
 c_stdlib_version:   # [linux]
   - "2.17"          # [linux]
+
+# Pin clang version to prevent linker segfault on osx platforms
+c_compiler:         # [osx]
+  - clang           # [osx]
+c_compiler_version: # [osx]
+  - 19.1.6          # [osx]
+cxx_compiler:       # [osx]
+  - clangxx         # [osx]
+cxx_compiler_version: # [osx]
+  - 19.1.6          # [osx]
